# outl

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  SECURITY.md
.claude/: settings.json
.claude/agents/: crdt-invariant-checker.md  markdown-roundtrip-tester.md  paper-verifier.md  refactor-architect.md
.claude/commands/: check-invariants.md  check.md  coverage.md  init-playground.md  new-op.md  roundtrip.md
.claude/hooks/: file-size-guard.sh  rust-quality.sh  session-context.sh
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: bench.yml  ci.yml  cleanup-tags.yml  mobile.yml  release.yml  testflight.yml
Casks/: outl-desktop-beta.rb  outl-desktop@beta.rb
Formula/: outl-beta.rb  outl@beta.rb
crates/outl-actions/: CLAUDE.md
crates/outl-actions/src/: block.rs  clipboard.rs  error.rs  journal.rs  lib.rs  tree.rs
crates/outl-cli/: CLAUDE.md  Cargo.toml
crates/outl-cli/src/: main.rs  sync_engine.rs  workspace_layout.rs
crates/outl-cli/tests/: e2e_full.rs  init_smoke.rs
crates/outl-config/: CLAUDE.md
crates/outl-config/src/: lib.rs  schema.rs
crates/outl-core/: CLAUDE.md
crates/outl-core/src/: lib.rs  lock.rs  log.rs  op.rs  tree.rs
crates/outl-core/tests/: concurrent_delete_edit.rs  concurrent_edit_move.rs  convergence.rs  cycle.rs  cycle_chain.rs  fractional_index.rs  idempotency.rs  large_log.rs  late_op.rs  property_based.proptest-regressions  property_based.rs
crates/outl-desktop/: CLAUDE.md  package.json
crates/outl-exec/src/: lib.rs  registry.rs
crates/outl-frontend-shared/: CLAUDE.md  package.json
crates/outl-md/: CLAUDE.md  Cargo.toml
crates/outl-mobile/: CLAUDE.md  package.json
crates/outl-shortcuts/: CLAUDE.md
crates/outl-tui/: CLAUDE.md  Cargo.toml
docs/: README.md  SUMMARY.md  cli.md  clients.md  config.md  getting-started.md  markdown-format.md  mcp-recipes.md  mcp.md  paste.md  roadmap.md  shared-primitives.md  shortcuts.md  tui.md  tutorial.md
docs/design/: clipboard.md
xtask/: Cargo.toml
(+115 files in other folders)
