[package]
name = "xtask"
description = "Internal task runner: codegen, fixture generators, bench helpers."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
publish = false

[[bin]]
name = "gen-10k"
path = "src/bin/gen_10k.rs"

[dependencies]
serde_json = { workspace = true }
clap = { workspace = true }
